--- a/profile-page/src/components/AboutComponent.css
+++ b/profile-page/src/components/AboutComponent.css
@@ -1,10 +1,21 @@
-.header-image {
-  width: 100%;
-  margin-top: -2em;
+.jumbotron {
+  margin-bottom: 4em;
+}
+.person-wrapper {
   margin-bottom: 2em;
 }
 
-.about-profile-pic {
-  float: left;
-  margin: 0 1em 1em 0;
+.profile-pic {
+  width: 50%;
+}
+
+.btn-primary {
+  background-image: none;
+  border: none;
+  border-radius: 0;
+  background-color: #2892D7;
+}
+
+h3 {
+  margin-bottom: 1em;
 }
