--- a/profile-page/src/components/AboutComponent.css
+++ b/profile-page/src/components/AboutComponent.css
@@ -1,21 +1,10 @@
-.jumbotron {
-  margin-bottom: 4em;
-}
-.person-wrapper {
-  margin-bottom: 2em;
+
+
+.page-devider {
+  height: 9px;
+  width: 100%;
 }
 
-.profile-pic {
-  width: 50%;
-}
-
-.btn-primary {
-  background-image: none;
-  border: none;
-  border-radius: 0;
-  background-color: #2892D7;
-}
-
-h3 {
-  margin-bottom: 1em;
+.half-pics {
+  width: 100%;
 }
