--- a/profile-page/src/components/ProjectsComponent.css
+++ b/profile-page/src/components/ProjectsComponent.css
@@ -1,9 +1,11 @@
-.header-image {
-  width: 100%;
-  margin-top: -2em;
+.robot-image {
+  padding: 10px;
+  box-shadow: 5px 10px 8px #888888;
+  position: relative;
 }
 
-.about-profile-pic {
-  float: left;
-  margin: 0 1em 1em 0;
+
+.text {
+  text-align: center;
+  color: black;
 }
