--- a/profile-page/src/components/ResumeComponent.css
+++ b/profile-page/src/components/ResumeComponent.css
@@ -1,10 +1,14 @@
-.header-image {
+.cat-image {
   width: 100%;
-  margin-top: -2em;
-  margin-bottom: 2em;
+  height: 400px;
 }
 
-.about-profile-pic {
-  float: left;
-  margin: 0 1em 1em 0;
+.resume-devider{
+  height: 9px;
+  width: 100%;
+}
+
+.techSkills{
+  padding: 10px;
+  box-shadow: 1px 2px 1.5px 2px #F6F5F5;
 }
