--- a/profile-page/src/components/HomeComponent.css
+++ b/profile-page/src/components/HomeComponent.css
@@ -1,4 +1,63 @@
-.header-image {
+.section{
+  position: relative;
   width: 100%;
-  margin-top: -2em;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.section h1 {
+  position: relative;
+  text-align: center;
+  font-size: 5vw;
+  z-index: 2;
+  padding: 20px;
+  margin: 15px;
+  opacity: .7;
+  color: black;
+}
+
+video {
+  width: 100%;
+}
+
+.video-container{
+  position: absolute;
+  top:0;
+  left:0;
+  width:100%;
+}
+
+.color-overlay{
+  position: absolute;
+  top:0;
+  left:0;
+  background-color: white;
+  width: 100%;
+  height: 100vh;
+  opacity: .6;
+  z-index: 1;
+}
+
+.button-overlay{
+  position: relative;
+  display: inline;
+  padding:  0.35em 1.2em;
+  border:0.1em solid #FFFFFF;
+  margin:0 0.3em 0.3em 0;
+  border-radius:0.12em;
+  box-sizing: border-box;
+  text-decoration:none;
+  font-weight:300;
+  color:#FFFFFF;
+  text-align:center;
+  transition: all 0.2s;
+  z-index: 3;
+}
+
+.button-overlay:hover {
+  color:white;
+  background-color:black;
 }
