--- a/profile-page/src/components/HomeComponent.css
+++ b/profile-page/src/components/HomeComponent.css
@@ -1,7 +1,7 @@
 .section{
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 70vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -12,7 +12,6 @@
   position: relative;
   text-align: center;
   font-size: 5vw;
-  z-index: 2;
   padding: 20px;
   margin: 15px;
   opacity: .7;
@@ -54,10 +53,14 @@ video {
   color:#FFFFFF;
   text-align:center;
   transition: all 0.2s;
-  z-index: 3;
 }
 
 .button-overlay:hover {
   color:white;
   background-color:black;
+}
+
+.home-text{
+  z-index: 4;
+  margin-bottom: 150px;
 }
