--- a/profile-page/src/components/HomeComponent.css
+++ b/profile-page/src/components/HomeComponent.css
@@ -64,3 +64,18 @@ video {
   z-index: 4;
   margin-bottom: 150px;
 }
+
+h4{
+  text-align: center;
+  font-style: italic;
+}
+
+h3{
+  text-align: center;
+  font-weight: bold;
+  color: black;
+}
+
+Link {
+  text-decoration: none !important
+}
