--- a/profile-page/src/components/HomeComponent.css
+++ b/profile-page/src/components/HomeComponent.css
@@ -40,40 +40,22 @@ video {
   z-index: 1;
 }
 
-.button-overlay{
-  position: relative;
-  display: inline;
-  padding:  0.35em 1.2em;
-  border:0.1em solid #FFFFFF;
-  margin:0 0.3em 0.3em 0;
-  border-radius:0.12em;
-  box-sizing: border-box;
-  text-decoration:none;
-  font-weight:300;
-  color:#FFFFFF;
-  text-align:center;
-  transition: all 0.2s;
-}
-
-.button-overlay:hover {
-  color:white;
-  background-color:black;
-}
-
-.home-text{
+.home-text {
   z-index: 4;
   margin-bottom: 150px;
 }
 
-h4{
+.card-text {
   text-align: center;
-  font-style: italic;
+  color: black;
+  font-weight: bold;
 }
 
-h3{
+.quote {
   text-align: center;
   font-weight: bold;
   color: black;
+  font-style: italic;
 }
 
 Link {
