--- a/profile-page/src/components/HomeComponent.css
+++ b/profile-page/src/components/HomeComponent.css
@@ -1,48 +1,7 @@
-.section{
-  position: relative;
-  width: 100%;
-  height: 70vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
-}
-
-.section h1 {
-  position: relative;
-  text-align: center;
-  font-size: 5vw;
-  padding: 20px;
-  margin: 15px;
-  opacity: .7;
-  color: black;
-}
-
 video {
+  object-fit: fill;
   width: 100%;
-}
-
-.video-container{
-  position: absolute;
-  top:0;
-  left:0;
-  width:100%;
-}
-
-.color-overlay{
-  position: absolute;
-  top:0;
-  left:0;
-  background-color: white;
-  width: 100%;
-  height: 100vh;
-  opacity: .6;
-  z-index: 1;
-}
-
-.home-text {
-  z-index: 4;
-  margin-bottom: 150px;
+  height: 73vh;
 }
 
 .card-text {
