--- a/profile-page/src/components/AboutComponent.css
+++ b/profile-page/src/components/AboutComponent.css
@@ -1,4 +1,7 @@
-
+.head-image {
+  width: 100%;
+  height: 73vh;
+}
 
 .page-devider {
   height: 9px;
@@ -7,4 +10,8 @@
 
 .half-pics {
   width: 100%;
+}
+
+.about-text {
+  color: black;
 }
