--- a/profile-page/src/components/ResumeComponent.css
+++ b/profile-page/src/components/ResumeComponent.css
@@ -12,3 +12,20 @@
   padding: 10px;
   box-shadow: 1px 2px 1.5px 2px #F6F5F5;
 }
+
+.tab-header {
+  color: black;
+}
+
+.tab-content {
+  color: black;
+}
+
+Tabs {
+    text-decoration: none !important
+}
+
+.icons {
+  font-size: -webkit-xxx-large;
+  text-align: center;
+}
