--- a/profile-page/src/components/ProjectsComponent.css
+++ b/profile-page/src/components/ProjectsComponent.css
@@ -1,4 +1,12 @@
 .carousel-img {
   width: 100%;
-  height: 73vh;
+  height: 83vh;
+}
+
+a {
+  text-decoration: none !important
+}
+
+h3, h4 {
+  color: black;
 }
